Fixed heading styles on smaller screens.

--- a/app/assets/stylesheets/heading.css.less
+++ b/app/assets/stylesheets/heading.css.less
@@ -1,12 +1,15 @@
 .heading.mod-home-page-primary {
   font-size: 4em;
   width: 100%;
-  height: 1em;
-  padding: 120px 0;
+  padding: 2.5em 0;
   text-align: center;
   line-height: normal;
 
-  @media (max-width: 767px) {
-    font-size:18px;
+  @media (max-width: 800px) {
+    font-size: 3em;
+  }
+
+  @media (max-width: 600px) {
+    padding: 2em 0;
   }
 }
